fixed author name

--- a/package.json
+++ b/package.json
@@ -8,5 +8,5 @@
     ], 
     "description": "A browser Extension for auto loading paginated web pages",
     "url": "http://autopagerize.net/",
-    "author": "swdyh (http://relucks.org/)"
+    "author": "swdyh"
 }
