added "permissions" : {"private-browsing": true} to allowed XPI to see tabs when in private browsing mode

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "http://autopagerize.net/",
     "homepage": "http://autopagerize.net/",
     "author": "swdyh",
+    "permissions" : {"private-browsing": true},
     "preferences": [{
         "name": "openPref",
         "title": "",
